--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logify-node-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Cross-service logging SDK with automatic request and correlation IDs.",
   "license": "MIT",
   "author": "Ashwin Pandey",
@@ -28,12 +28,18 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.esm.json && tsc -p tsconfig.cjs.json",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "typecheck": "tsc -p tsconfig.esm.json --noEmit",
     "example": "node examples/server.js",
-    "test": "node tests/smoke.test.js",
+    "smoke": "node tests/smoke.test.js",
     "clean": "rimraf dist",
     "dev": "tsc -w -p tsconfig.esm.json",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build"
   },
   "keywords": [
     "logging",
@@ -50,9 +56,15 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.19.19",
+    "eslint": "^9.0.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.0"
   },
   "publishConfig": {
