--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.esm.json && tsc -p tsconfig.cjs.json",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -39,7 +37,7 @@
     "smoke": "node tests/smoke.test.js",
     "clean": "rimraf dist",
     "dev": "tsc -w -p tsconfig.esm.json",
-    "prepublishOnly": "npm run clean && npm run lint && npm run test && npm run build"
+    "prepublishOnly": "npm run clean && npm run test && npm run build"
   },
   "keywords": [
     "logging",
@@ -56,11 +54,9 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.19.19",
-    "eslint": "^9.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
