--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "files": [
     "dist/**",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.esm.json && tsc -p tsconfig.cjs.json",
